# dicomkit

./: README.md  dicomkit_pullstudy.py  findphysiodicom.sh  pulldicom.sh  pullphysiodicom.sh  pullphysiodicoms.py  pullsubject.sh  pyproject.toml  requirements.txt  setup.py
bash/: pullphysiodicom.sh
dicomkit/: __init__.py  dk_getpatient.py  dk_getsubject.py  dk_horos2fw.py  dk_query.py  utils.py
dicomkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
old_bash/: findphysiodicom.sh  pullsubject.sh
scripts/: getdicom.sh
