[project]
name = "dicomkit"
version = "2025.9.10"
description = "Python toolkit for remote DICOM server access"
authors = [
    {name = "Mike Tyszka", email = "jmt@caltech.edu"},
]
dependencies = [
    "pynetdicom~=2.1.0",
    "pydicom~=2.4.4",
    "pandas~=1.5.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
dk_getpatient = "dicomkit.dk_getpatient:main"
dk_query = "dicomkit.dk_query:main"
dk_horos2fw = "dicomkit.dk_horos2fw:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
